add dragonwell11 support